@@ -21,9 +21,9 @@
 # Default-Start:       S
 # Default-Stop:
 # Short-Description:   Mounts /sys and /proc virtual (kernel) filesystems.
-#                      Mounts /run tmpfs.
+#                      Mounts /run (tmpfs) and /dev (devtmpfs).
 # Description:         Mounts /sys and /proc virtual (kernel) filesystems.
-#                      Mounts /run tmpfs.
+#                      Mounts /run (tmpfs) and /dev (devtmpfs).
 # X-LFS-Provided-By:   LFS
 ### END INIT INFO
 
@@ -32,7 +32,6 @@
 case "${1}" in
    start)
       # Make sure /run/var is available before logging any messages
-      mkdir -p /run
       mount -n /run || failed=1
       mkdir -p /run/var /run/lock /run/shm
       chmod 1777 /run/shm
